Cleanup some new PMD warnings from PMD 7.x
I haven't updated to PMD 7.x in ivy/maven yet since I still have 83 PMD violations
to go through, and I don't know (yet) if any of them were supposed to be ignored
by the xpath expressions in tools/pmd/josm-ruleset.xml.

I may re-enable some of the PMD checks I've temporarily disabled prior to committing
the update for PMD.

Additionally cleanup some SonarLint issues in the modified files.

git-svn-id: https://josm.openstreetmap.de/svn/trunk@19101 0c6e7542-c601-0410-84e7-c038aed88b3b